<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_menu4c"
    android:orientation="vertical">

    <!-- Заголовок діалогу -->
    <TextView
        android:id="@+id/alert_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_dialog"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold"
        android:paddingStart="16dp"
        android:textSize="@dimen/text_size"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="8dp"
        android:gravity="center" />

    <!-- Текст повідомлення -->
    <TextView
        android:id="@+id/alert_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="16dp"
        android:paddingTop="8dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:text="@string/title_dialog_text"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="@dimen/text_size" />

    <!-- Кнопки -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/positive_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="@dimen/text_size"
            android:background="@drawable/ic_bbutton"
            android:layout_margin="3dp"
            android:padding="8dp" />

        <Button
            android:id="@+id/negative_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="@dimen/text_size"
            android:background="@drawable/ic_bbutton"
            android:text="@string/no"
            android:layout_margin="3dp"
            android:padding="8dp" />
    </LinearLayout>
</LinearLayout>