<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_menu"
    android:clickable="true"
    android:elevation="20dp"
    android:focusable="true">

    <TextView
        android:id="@+id/error_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/internet"
        android:textAlignment="gravity"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/rv_cards"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/close_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/close_button_height"
            android:contentDescription="@string/image"
            app:srcCompat="@drawable/ic_bbutton" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="@dimen/button_shadowDx"
            android:shadowDy="@dimen/button_shadowDy"
            android:shadowRadius="@dimen/button_shadowRadius"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/text_size"
            android:textStyle="bold" />
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>