<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="5dp"
    android:background="@drawable/shape_menu"
    android:elevation="120dp"
    android:padding="20dp">

    <Button
        android:id="@+id/yes_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="2dp"
        android:layout_weight="1"
        android:background="@drawable/ic_bbutton"
        android:padding="@dimen/button_padding"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="@dimen/button_shadowDx"
        android:shadowDy="@dimen/button_shadowDy"
        android:shadowRadius="@dimen/button_shadowRadius"
        android:text="@string/set"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/no_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/no_button" />

    <Button
        android:id="@+id/no_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="2dp"
        android:layout_weight="1"
        android:background="@drawable/ic_bbutton"
        android:padding="@dimen/button_padding"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="@dimen/button_shadowDx"
        android:shadowDy="@dimen/button_shadowDy"
        android:shadowRadius="@dimen/button_shadowRadius"
        android:text="@string/cancel"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/yes_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/timer"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:shadowColor="@color/text_shadow"
        android:shadowDx="@dimen/button_shadowDx"
        android:shadowDy="@dimen/button_shadowDy"
        android:shadowRadius="@dimen/button_shadowRadius"
        android:text="@string/colon"
        android:textColor="@color/text_white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/cardView2"
        app:layout_constraintEnd_toStartOf="@+id/cardView2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cardView"
        app:layout_constraintTop_toTopOf="@+id/cardView2" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/box_orange"
        app:layout_constraintTop_toBottomOf="@+id/textView6"

        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="2dp"
        card_view:cardMaxElevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">


            <Spinner
                android:id="@+id/spinner_hours"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="#00CCCCCC"
                android:elevation="0dp"
                android:minHeight="@dimen/spiner_munHeight"
                android:popupBackground="@drawable/message_bg"
                android:popupElevation="0dp"
                android:textAlignment="center"
                android:textSize="@dimen/spiner_minutes"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="@dimen/button_shadowDx"
                android:shadowDy="@dimen/button_shadowDy"
                android:shadowRadius="@dimen/button_shadowRadius"
                android:text="@string/hours"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_minutes"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:cardBackgroundColor="@color/box_orange"
        card_view:cardCornerRadius="6dp"
        card_view:cardElevation="2dp"
        card_view:cardMaxElevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <Spinner
                android:id="@+id/spinner_minutes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:background="#00CCCCCC"
                android:elevation="0dp"
                android:minHeight="@dimen/spiner_munHeight"
                android:popupBackground="@drawable/message_bg"
                android:popupElevation="0dp"
                android:textAlignment="center"
                android:textSize="@dimen/spiner_minutes"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_minutes"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:shadowColor="@color/text_shadow"
                android:shadowDx="@dimen/button_shadowDx"
                android:shadowDy="@dimen/button_shadowDy"
                android:shadowRadius="@dimen/button_shadowRadius"
                android:text="@string/minutes"
                android:textColor="@color/text_white"
                android:textSize="@dimen/text_minutes"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>


